updated portfolio website

--- a/index.html
+++ b/index.html
@@ -1,232 +1,262 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio Website</title>
-    <!-- custom css link -->
-    <link rel="stylesheet" href="./css/all.min.css" />
-    <link rel="stylesheet" href="./css/style.css" type="text/css" />
-  </head>
-  <body>
-    <!-- header design -->
-    <header>
-      <a href="#" class="logo">Cod<span>e</span>r.</a>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Portfolio Website</title>
+        <!-- custom css link -->
+        <link rel="stylesheet" href="./css/all.min.css" />
+        <link rel="stylesheet" href="./css/style.css" type="text/css" />
+    </head>
+    <body>
+        <!-- header design -->
+        <header>
+            <a href="#" class="logo">Dev<span>e</span>lop<span>e</span>r.</a>
 
-      <ul class="navlist">
-        <li><a href="#home" class="active">Home</a></li>
-        <li><a href="#about">About Me</a></li>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contact">Contact Me</a></li>
-      </ul>
+            <ul class="navlist">
+                <li><a href="#home" class="active">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+            </ul>
 
-      <div id="menu-icon">
-        <hr />
-        <hr />
-        <hr />
-      </div>
-    </header>
+            <div id="menu-icon">
+                <hr />
+                <hr />
+                <hr />
+            </div>
+        </header>
 
-    <!-- home section desing -->
-    <section class="home" id="home">
-      <div class="home-text">
-        <div class="slide">
-          <span class="one">Hello</span>
-          <span class="two">I'm</span>
-        </div>
-        <h1>Ngoni</h1>
-        <h3>FullStack <span>Developer</span></h3>
-        <p>Web Developer with 1+ years experience.</p>
-        <div class="button">
-          <a href="#" class="btn">Say Hello</a>
-          <a href="#" class="btn2"
-            ><span><i class="fas fa-play"></i></span>Watch My Work</a
-          >
-        </div>
-      </div>
-    </section>
+        <!-- home section desing -->
+        <section class="home" id="home">
+            <div class="home-text">
+                <div class="slide">
+                    <span class="one">Hello</span>
+                    <span class="two">I'm</span>
+                </div>
+                <h1>Ngoni</h1>
+                <h3>FullStack <span>Developer</span></h3>
+                <p>Prospective Web and Mobile Developer</p>
+                <div class="button">
+                    <a href="https://github.com/Kayzman" class="btn">My Github Profile</a>
+                </div>
+            </div>
+        </section>
 
-    <!-- about section design -->
-    <section class="about" id="about">
-      <div class="about-img">
-        <img src="./img/me1_2.jpg" alt="Me" />
-      </div>
+        <!-- about section design -->
+        <section class="about" id="about">
+            <div class="about-img">
+                <img src="./img/me1_2.jpg" alt="Me" />
+            </div>
 
-      <div class="about-text">
-        <h2>About <span>Me</span></h2>
-        <h4>Creative FullStack Developer!</h4>
-        <p>Check out my previously done projects all about web designing.</p>
-        <a href="#about" class="btn">More About</a>
-      </div>
-    </section>
+            <div class="about-text">
+                <h2>About <span>Me</span></h2>
+                <h4>Creative <span>&</span> Prospective Web and Mobile Developer!</h4>
+                <p class="me">I'm Ngoni Katsidzira.</p>
+                <p class="me">
+                    A current student at <a href="www.hit.ac.zw">Harare Institute of Technology</a>
+                </p>
+                <a href="https://kayzman.github.io/My_Resume/" class="btn">Resume</a>
+            </div>
+        </section>
 
-    <!-- service section design -->
-    <section class="services" id="services">
-      <div class="main-text">
-        <p>What I am an Expert In</p>
-        <h2><span>My</span>Services</h2>
-      </div>
+        <!-- service section design -->
+        <section class="services" id="services">
+            <div class="main-text">
+                <p>What I am good at</p>
+                <h2><span>My </span>Skills</h2>
+            </div>
 
-      <div class="services-content">
-        <div class="box">
-          <div class="s-icons">
-            <i class="fas fa-mobile"></i>
-          </div>
-          <h3>Web Design</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. At nam beatae, ab laborum fuga
-            facere!
-          </p>
-          <a href="#" class="read">Read More</a>
-        </div>
+            <div class="services-content">
+                <div class="box">
+                    <div class="s-icons">
+                        <i class="fas fa-mobile"></i>
+                    </div>
+                    <h3>Mobile Development</h3>
+                    <p>
+                        I make mobile apps for Android with Java, and both Android & iOS devices
+                        with React Native.
+                    </p>
+                    <!-- <a href="#" class="read">Read More</a> -->
+                </div>
 
-        <div class="box">
-          <div class="s-icons">
-            <i class="fas fa-code"></i>
-          </div>
-          <h3>Web Development</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. At nam beatae, ab laborum fuga
-            facere!
-          </p>
-          <a href="#" class="read">Read More</a>
-        </div>
+                <div class="box">
+                    <div class="s-icons">
+                        <i class="fas fa-code"></i>
+                    </div>
+                    <h3>Web Development</h3>
+                    <p>
+                        I design and create websites and Web Apps with JavaScript (React.js &
+                        Express.js) & ASP.NET.
+                    </p>
+                    <!-- <a href="#" class="read">Read More</a> -->
+                </div>
 
-        <div class="box">
-          <div class="s-icons">
-            <i class="fas fa-server"></i>
-          </div>
-          <h3>API Development</h3>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. At nam beatae, ab laborum fuga
-            facere!
-          </p>
-          <a href="#" class="read">Read More</a>
-        </div>
-      </div>
-    </section>
+                <div class="box">
+                    <div class="s-icons">
+                        <i class="fas fa-server"></i>
+                    </div>
+                    <h3>Backend API Development</h3>
+                    <p>I design and create backend APIs with JavaScript and ASP.NET</p>
+                    <!-- <a href="#" class="read">Read More</a> -->
+                </div>
+            </div>
+        </section>
 
-    <!-- portfolio section design -->
-    <section class="portfolio" id="portfolio">
-      <div class="main-text">
-        <p>Portfolio</p>
-        <h2><span>Latest </span>Project</h2>
-      </div>
+        <!-- portfolio section design -->
+        <section class="portfolio" id="portfolio">
+            <div class="main-text">
+                <p>Portfolio</p>
+                <h2><span>Personal </span>Projects</h2>
+            </div>
 
-      <div class="portfolio-content">
-        <div class="row">
-          <img src="./img/portfolio1.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
+            <div class="portfolio-content">
+                <div class="row">
+                    <img src="./img/portfolio0.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Very Simple Web Music Player</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="https://kayzman.github.io/"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
 
-        <div class="row">
-          <img src="./img/portfolio2.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
+                <div class="row">
+                    <img src="./img/color-flipper.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Random Color generator for projects.</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="https://kayzman.github.io/color-flipper/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
 
-        <div class="row">
-          <img src="./img/portfolio3.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
+                <div class="row">
+                    <img src="./img/portfolio1.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Restaurant Menu Page UI</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="https://kayzman.github.io/resturant-menu-page/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
 
-        <div class="row">
-          <img src="./img/portfolio4.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
+                <div class="row">
+                    <img src="./img/portfolio2.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Web Layout Design</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="#"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
 
-        <div class="row">
-          <img src="./img/portfolio5.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
+                <div class="row">
+                    <img src="./img/portfolio3.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Web Layout Design</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="#"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
 
-        <div class="row">
-          <img src="./img/portfolio6.png" alt="Portfolio1" />
-          <div class="layer">
-            <h5>Web Layout Design</h5>
-            <p>Checkout the App in action.</p>
-            <a href="#"><i class="fas fa-link"></i></a>
-          </div>
-        </div>
-      </div>
-    </section>
+                <div class="row">
+                    <img src="./img/portfolio4.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Web Layout Design</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="#"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
 
-    <!-- contact section design -->
-    <section class="contact" id="contact">
-      <div class="contact-text">
-        <h2>Contact <span>Me!</span></h2>
-        <h4>If You Want To Get In Touch.</h4>
-        <p>
-          I'm a FullStack Web Developer - creating bold & brave apps for people all across the
-          world.
-        </p>
+                <div class="row">
+                    <img src="./img/portfolio5.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Web Layout Design</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="#"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
 
-        <div class="list">
-          <li><a href="#">+263 735 315 909</a></li>
-          <li><a href="#">ngonik8@gmail.com</a></li>
-        </div>
+                <div class="row">
+                    <img src="./img/portfolio6.png" alt="Portfolio1" />
+                    <div class="layer">
+                        <h5>Web Layout Design</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="#"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-        <div class="contact-icons">
-          <a href="#"><img src="./svgs/brands/facebook-f.svg" alt="facebook" /></a>
-          <a href="#"><img src="./svgs/brands/twitter.svg" alt="twitter" /></a>
-          <a href="#"><img src="./svgs/brands/instagram.svg" alt="instagram" /></a>
-          <a href="#"><img src="./svgs/brands/github.svg" alt="github" /></a>
-          <a href="#"><img src="./svgs/brands/linkedin.svg" alt="linkedIn" /></a>
-        </div>
-      </div>
+        <!-- contact section design -->
+        <section class="contact" id="contact">
+            <div class="contact-text">
+                <h2>Contact <span>Me!</span></h2>
+                <h4>If You Want To Get In Touch.</h4>
+                <p>
+                    I'm a Prospective & Aspiring Web and Mobile Developer - creating bold and
+                    innovative apps for the people all across the world.
+                </p>
 
-      <div class="contact-form">
-        <form action="">
-          <input type="name" placeholder="Your Name" required />
-          <input type="email" placeholder="Your Email Address" required />
-          <input type="text" placeholder="Your Mobile Number" required />
-          <textarea
-            name=""
-            id=""
-            cols="35"
-            rows="10"
-            placeholder="How can i Help You"
-            required></textarea>
-          <input type="submit" value="Send Message" class="submit" required />
-        </form>
-      </div>
-    </section>
+                <div class="list">
+                    <li>Contact No.<a href="#">+263 71 255 6096</a></li>
+                    <li>Email<a href="#">ngonik8@gmail.com</a></li>
+                </div>
 
-    <!-- end section design -->
-    <section class="end">
-      <div class="last-text">
-        <p>
-          Copyright &#169; <span class="year">2023</span> by Ngoni Katsidzira. All Rights Reserved.
-        </p>
-      </div>
+                <div class="contact-icons">
+                    <a href="https://www.facebook.com/ngoni.kay.50"
+                        ><img src="./svgs/brands/facebook-f.svg" alt="facebook"
+                    /></a>
+                    <a href="https://www.twitter.com/Kayzman11"
+                        ><img src="./svgs/brands/twitter.svg" alt="twitter"
+                    /></a>
+                    <a href="https://www.instagram.com/ngoni_kay/"
+                        ><img src="./svgs/brands/instagram.svg" alt="instagram"
+                    /></a>
+                    <a href="https://github.com/Kayzman"
+                        ><img src="./svgs/brands/github.svg" alt="github"
+                    /></a>
+                    <a href="https://www.linkedin.com/in/ngoni-katsidzira-379b57212/"
+                        ><img src="./svgs/brands/linkedin.svg" alt="linkedIn"
+                    /></a>
+                </div>
+            </div>
 
-      <div class="top">
-        <a href="#home"><i class="fas fa-arrow-up"></i></a>
-      </div>
-    </section>
+            <!-- <div class="contact-form">
+                <form action="">
+                    <input type="name" placeholder="Your Name" required />
+                    <input type="email" placeholder="Your Email Address" required />
+                    <input type="text" placeholder="Your Mobile Number" required />
+                    <textarea
+                        name=""
+                        id=""
+                        cols="35"
+                        rows="10"
+                        placeholder="How can i Help You"
+                        required></textarea>
+                    <input type="submit" value="Send Message" class="submit" required />
+                </form>
+            </div> -->
+        </section>
 
-    <!-- custom js link -->
-    <script src="./js/script.js"></script>
-  </body>
+        <!-- end section design -->
+        <section class="end">
+            <div class="last-text">
+                <p>
+                    Copyright &#169; <span class="year">2023</span> by Ngoni Katsidzira. All Rights
+                    Reserved.
+                </p>
+            </div>
+
+            <div class="top">
+                <a href="#home"><i class="fas fa-arrow-up"></i></a>
+            </div>
+        </section>
+
+        <!-- custom js link -->
+        <script src="./js/script.js"></script>
+    </body>
 </html>
