--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <h3>Web Development</h3>
                     <p>
                         I design and create websites and Web Apps with JavaScript (React.js &
-                        Express.js) & ASP.NET.
+                        Express.js)
                     </p>
                     <!-- <a href="#" class="read">Read More</a> -->
                 </div>
@@ -99,7 +99,16 @@
                         <i class="fas fa-server"></i>
                     </div>
                     <h3>Backend API Development</h3>
-                    <p>I design and create backend APIs with JavaScript and ASP.NET</p>
+                    <p>I design and create backend APIs with JavaScript & Node.js</p>
+                    <!-- <a href="#" class="read">Read More</a> -->
+                </div>
+
+                <div class="box">
+                    <div class="s-icons">
+                        <i class="fas fa-computer"></i>
+                    </div>
+                    <h3>Desktop App Development</h3>
+                    <p>I design and create desktop apps with JavaScript and Electron.js</p>
                     <!-- <a href="#" class="read">Read More</a> -->
                 </div>
             </div>
@@ -109,10 +118,19 @@
         <section class="portfolio" id="portfolio">
             <div class="main-text">
                 <p>Portfolio</p>
-                <h2><span>Personal </span>Projects</h2>
+                <h2><span>Personal & Collaboration </span>Projects</h2>
             </div>
 
             <div class="portfolio-content">
+                <div class="row">
+                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <div class="layer">
+                        <h5>HIT Alumni Website</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="https://hit-alumni.netlify.app/"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+
                 <div class="row">
                     <img src="./img/todo_app.png" alt="Todo mobile app" />
                     <div class="layer">
@@ -123,7 +141,7 @@
                 </div>
 
                 <div class="row">
-                    <img src="./img/portfolio0.png" alt="Portfolio1" />
+                    <img src="./img/portfolio0.png" alt="Web Music Player" />
                     <div class="layer">
                         <h5>Very Simple Web Music Player</h5>
                         <p>Checkout the App in action.</p>
@@ -132,9 +150,9 @@
                 </div>
 
                 <div class="row">
-                    <img src="./img/color-flipper.png" alt="Portfolio1" />
+                    <img src="./img/color-flipper.png" alt="Random Color generator" />
                     <div class="layer">
-                        <h5>Random Color generator for projects.</h5>
+                        <h5>Random Color Generator for projects.</h5>
                         <p>Checkout the App in action.</p>
                         <a href="https://kayzman.github.io/color-flipper/"
                             ><i class="fas fa-link"></i
@@ -143,7 +161,7 @@
                 </div>
 
                 <div class="row">
-                    <img src="./img/portfolio1.png" alt="Portfolio1" />
+                    <img src="./img/portfolio1.png" alt="Restaurant Menu" />
                     <div class="layer">
                         <h5>Restaurant Menu Page UI</h5>
                         <p>Checkout the App in action.</p>
