--- a/index.html
+++ b/index.html
@@ -122,6 +122,54 @@
             </div>
 
             <div class="portfolio-content">
+                <!-- Assignment Manager -->
+                <div class="row">
+                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <div class="layer">
+                        <h5>Assignment Manager</h5>
+                        <p>Checkout the App Gallery.</p>
+                        <a href="https://kayzman.github.io/assignment_manager_gallery/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
+
+                <!-- Kayz Music App -->
+                <div class="row">
+                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <div class="layer">
+                        <h5>Kayz Music App</h5>
+                        <p>Checkout the App Gallery.</p>
+                        <a href="https://kayzman.github.io/kayzmusic_gallery/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
+
+                <!-- Expense Tracker App -->
+                <div class="row">
+                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <div class="layer">
+                        <h5>Expense Tracker App</h5>
+                        <p>Checkout the App Gallery.</p>
+                        <a href="https://kayzman.github.io/expense-tracker-gallery/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
+
+                <!-- Cryptocoin App -->
+                <div class="row">
+                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <div class="layer">
+                        <h5>Cryptocoin App</h5>
+                        <p>Checkout the App Gallery.</p>
+                        <a href="https://kayzman.github.io/cryptocoin-gallery/"
+                            ><i class="fas fa-link"></i
+                        ></a>
+                    </div>
+                </div>
+
                 <div class="row">
                     <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
                     <div class="layer">
