updated portfolio website

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="portfolio-content">
                 <!-- Assignment Manager -->
                 <div class="row">
-                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <img src="./img/assigment_home.jpg" alt="HIT Alumni Website" />
                     <div class="layer">
                         <h5>Assignment Manager</h5>
                         <p>Checkout the App Gallery.</p>
@@ -136,7 +136,7 @@
 
                 <!-- Kayz Music App -->
                 <div class="row">
-                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <img src="./img/kayzMusic_homeTracks.jpg" alt="HIT Alumni Website" />
                     <div class="layer">
                         <h5>Kayz Music App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -148,7 +148,7 @@
 
                 <!-- Expense Tracker App -->
                 <div class="row">
-                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <img src="./img/expenseTracker_home.jpg" alt="HIT Alumni Website" />
                     <div class="layer">
                         <h5>Expense Tracker App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -160,7 +160,7 @@
 
                 <!-- Cryptocoin App -->
                 <div class="row">
-                    <img src="./img/hit_alumni.png" alt="HIT Alumni Website" />
+                    <img src="./img/cryptocoin_home.jpg" alt="HIT Alumni Website" />
                     <div class="layer">
                         <h5>Cryptocoin App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -185,15 +185,6 @@
                         <h5>Todo Mobile App</h5>
                         <p>Checkout the App in action.</p>
                         <a href="https://expo.dev/@kayzman/Todo_App"><i class="fas fa-link"></i></a>
-                    </div>
-                </div>
-
-                <div class="row">
-                    <img src="./img/portfolio0.png" alt="Web Music Player" />
-                    <div class="layer">
-                        <h5>Very Simple Web Music Player</h5>
-                        <p>Checkout the App in action.</p>
-                        <a href="https://kayzman.github.io/"><i class="fas fa-link"></i></a>
                     </div>
                 </div>
 
