--- a/index.html
+++ b/index.html
@@ -182,6 +182,15 @@
                 <div class="row">
                     <img src="./img/todo_app.png" alt="Todo mobile app" />
                     <div class="layer">
+                        <h5>Korvo App</h5>
+                        <p>Checkout the App in action.</p>
+                        <a href="https://expo.dev/@kayzman/Korvo"><i class="fas fa-link"></i></a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <img src="./img/todo_app.png" alt="Todo mobile app" />
+                    <div class="layer">
                         <h5>Todo Mobile App</h5>
                         <p>Checkout the App in action.</p>
                         <a href="https://expo.dev/@kayzman/Todo_App"><i class="fas fa-link"></i></a>
