--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class="portfolio-content">
                 <!-- Assignment Manager -->
                 <div class="row">
-                    <img src="./img/assigment_home.jpg" alt="HIT Alumni Website" />
+                    <img src="./img/assigment_home.jpg" alt="Assignment Manager Mobile App" />
                     <div class="layer">
                         <h5>Assignment Manager</h5>
                         <p>Checkout the App Gallery.</p>
@@ -136,7 +136,7 @@
 
                 <!-- Kayz Music App -->
                 <div class="row">
-                    <img src="./img/kayzMusic_homeTracks.jpg" alt="HIT Alumni Website" />
+                    <img src="./img/kayzMusic_homeTracks.jpg" alt="Kayz Music Mobile App" />
                     <div class="layer">
                         <h5>Kayz Music App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -148,7 +148,7 @@
 
                 <!-- Expense Tracker App -->
                 <div class="row">
-                    <img src="./img/expenseTracker_home.jpg" alt="HIT Alumni Website" />
+                    <img src="./img/expenseTracker_home.jpg" alt="Expense Tracker Mobile App" />
                     <div class="layer">
                         <h5>Expense Tracker App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -160,7 +160,7 @@
 
                 <!-- Cryptocoin App -->
                 <div class="row">
-                    <img src="./img/cryptocoin_home.jpg" alt="HIT Alumni Website" />
+                    <img src="./img/cryptocoin_home.jpg" alt="Cryptocoin Mobile App" />
                     <div class="layer">
                         <h5>Cryptocoin App</h5>
                         <p>Checkout the App Gallery.</p>
@@ -180,9 +180,9 @@
                 </div>
 
                 <div class="row">
-                    <img src="./img/todo_app.png" alt="Todo mobile app" />
+                    <img src="./img/todo_app.png" alt="Korvo mobile app" />
                     <div class="layer">
-                        <h5>Korvo App</h5>
+                        <h5>Korvo (Notes & Todo) App</h5>
                         <p>Checkout the App in action.</p>
                         <a href="https://expo.dev/@kayzman/Korvo"><i class="fas fa-link"></i></a>
                     </div>
